#
# Makefile.am for perl-bindings/doc/examples
#

ycp_examplesdir = 	$(docdir)/examples
perl_examplesdir = 	$(docdir)/examples

ycp_examples_DATA =				\
	ArgCheck.ycp				\
	Eval.ycp				\
	ModEx.ycp				\
	ModParse.ycp				\
	ModUse.ycp				\
	ModWithMain.ycp				\
	Run.ycp

perl_examples_DATA =				\
	arg_check.pl				\
	dummy.pm				\
	mod_ex.pm				\
	mod_ex_main.pl


EXTRA_DIST = $(ycp_examples_DATA perl_examples_DATA)

