PLGB_BASEDIR = $(ydatadir)/devtools/pluglib-bindings
swigdir = $(PLGB_BASEDIR)/swig

swig_DATA = \
	BloCxx.i \
	BloCxx_Bool.i \
	BloCxx_Common.i \
	BloCxx_Hash.i \
	BloCxx_List.i \
	BloCxx_String.i \
	BloCxx_Types.i \
	LiMaL.i \
	std_Common.i \
	std_Hash.i \
	std_List.i \
	yast_perlrun.swg

EXTRA_DIST = $(swig_DATA)
